# waytoodep_practice

./: Cargo.toml  README.md
src/: dumb.rs  main.rs
