[package]
name = "waytoodeep"
version = "0.1.0"
edition = "2021"

[dependencies]
color-eyre = "0.5.11"
reqwest = { version = "0.11.4", default-features = false, features = ["rustls-tls"] }
tokio = { version = "1.9.0", features = ["full"] }
tokio-rustls = "0.22.0"
tracing = "0.1.26"
tracing-subscriber = "0.2.19"
webpki = "0.22.2"
webpki-roots = "0.21.1"
